--- a/index.html
+++ b/index.html
@@ -142,7 +142,13 @@
    </form>
    
  </section>
+ <hr>
 
+ <footer id="footer">
+ 
+    <p> &copy; 2024 -My primera pagina web </p>
+ </footer>
+ 
 
 </body>
 </html>
