--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
        
      Me apasiona ayudar a los demás y resolver problemas, lo que se traduce en un servicio al cliente excepcional.  
      </p>
+
+
+     <h2>MI IMAGEN ...</h2>
+<img src="imagenes/orly.png" alt="sobre mi" width="60" height="60">
+<br>
+<hr>
+
+<a href="https://www.facebook.com/orla4545/?locale=es_LA" target="_blank">
+    <img src="imagenes/logo face.png" alt="Facebook" width="50" height="50">
+  </a>
+
   </section>
  
  <!--SECCION ENCABEZADOS -->
