--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi_primer sitio web</title>
     <link rel="stylesheet" href="css/style.css">
-    <script type="tex/javascript" src="js/javascript"></script>
+    <script type="tex/javascript" src="js/javascript.js"></script>
 </head>
 <body>
         
